--- a/src/styles/ProductDetailsStyles.css
+++ b/src/styles/ProductDetailsStyles.css
@@ -45,6 +45,9 @@
   transform: scale(0.9);
 }
 
+.card-img{
+  object-fit:contain;
+}
 .similar-products .card-img-top {
   height: 300px !important;
 }
